--- a/Falabella8/Cube.html
+++ b/Falabella8/Cube.html
@@ -681,13 +681,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(35px, 150px) rotate(0deg);
 }
 /*#/#*//*#i4.i522.text.css:text/base/css*/
-#i522 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i522 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 11px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i522.i523.positioning.css:positioning/base/css.2*/
 #i522 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 63px;
-        -ms-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+}
+/*#/#*//*#i4.i548.image.css:image/base/css*/
+#i548 { opacity: 1; }
+/*#/#*//*#i548.i549.positioning.css:positioning/base/css.2*/
+#i548 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 13px;
+        -ms-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -775,6 +784,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(83px, 108px) rotate(0deg);
         transform: translate(0, 0) translate(83px, 108px) rotate(0deg);
 }
+/*#/#*//*#i5.i550.text.css:text/base/css*/
+#i550 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 11px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i550.i551.positioning.css:positioning/base/css.2*/
+#i550 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 63px;
+        -ms-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+}
 /*#/#*//*#i5.i536.text.css:text/base/css*/
 #i536 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i536.i537.positioning.css:positioning/base/css.2*/
@@ -784,14 +802,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(35px, 150px) rotate(0deg);
         transform: translate(0, 0) translate(35px, 150px) rotate(0deg);
 }
-/*#/#*//*#i5.i534.text.css:text/base/css*/
-#i534 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i534.i535.positioning.css:positioning/base/css.2*/
-#i534 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 63px;
-        -ms-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
+/*#/#*//*#i5.i558.image.css:image/base/css*/
+#i558 { opacity: 1; }
+/*#/#*//*#i558.i559.positioning.css:positioning/base/css.2*/
+#i558 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 13px;
+        -ms-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
 }
 /*#/#*//*#i5.i434.shape.css:shape/base/css*/
 #i434 { background-color: #dedede; opacity: 0.00;
@@ -879,14 +897,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(254px, 220px) rotate(0deg);
         transform: translate(0, 0) translate(254px, 220px) rotate(0deg);
 }
-/*#/#*//*#i6.i546.text.css:text/base/css*/
-#i546 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i546.i547.positioning.css:positioning/base/css.2*/
-#i546 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 63px;
-        -ms-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 182px) rotate(0deg);
+/*#/#*//*#i6.i552.text.css:text/base/css*/
+#i552 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 11px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i552.i553.positioning.css:positioning/base/css.2*/
+#i552 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 63px;
+        -ms-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 185px) rotate(0deg);
 }
 /*#/#*//*#i6.i544.text.css:text/base/css*/
 #i544 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -896,6 +914,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(35px, 150px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(35px, 150px) rotate(0deg);
         transform: translate(0, 0) translate(35px, 150px) rotate(0deg);
+}
+/*#/#*//*#i6.i560.image.css:image/base/css*/
+#i560 { opacity: 1; }
+/*#/#*//*#i560.i561.positioning.css:positioning/base/css.2*/
+#i560 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 13px;
+        -ms-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(142px, 217px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -965,7 +992,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i414.text.html:text/html-->
 <div id="i414">Reserva tu plan a Europa y págalo a cuotas</div>
 <!--#/#--><!--#i4.i522.text.html:text/html-->
-<div id="i522">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses.</div>
+<div id="i522">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses. Aplican T&C.</div>
+<!--#/#--><!--#i4.i548.image.html:image/html-->
+<img id="i548" src="https://i.imgur.com/zGREj9N.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
@@ -988,10 +1017,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i530.image.html:image/html-->
 <img id="i530" src="https://i.imgur.com/jMtWVUi.png"/>
+<!--#/#--><!--#i5.i550.text.html:text/html-->
+<div id="i550">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses. Aplican T&C.</div>
 <!--#/#--><!--#i5.i536.text.html:text/html-->
 <div id="i536">Reserva tu plan a Europa y págalo a cuotas</div>
-<!--#/#--><!--#i5.i534.text.html:text/html-->
-<div id="i534">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses.</div>
+<!--#/#--><!--#i5.i558.image.html:image/html-->
+<img id="i558" src="https://i.imgur.com/zGREj9N.png"/>
 <!--#/#--><!--#i5.i434.shape.html:shape/html-->
 <div id="i434"></div>
 <!--#/#--><!--#i5.i424.image.html:image/html-->
@@ -1014,10 +1045,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i532" src="https://i.imgur.com/jMtWVUi.png"/>
 <!--#/#--><!--#i6.i518.image.html:image/html-->
 <img id="i518" src="https://i.imgur.com/M6QtrYS.png"/>
-<!--#/#--><!--#i6.i546.text.html:text/html-->
-<div id="i546">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y págalo antes de viajar sin pagar intereses.</div>
+<!--#/#--><!--#i6.i552.text.html:text/html-->
+<div id="i552">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses. Aplican T&C.</div>
 <!--#/#--><!--#i6.i544.text.html:text/html-->
 <div id="i544">Reserva tu plan a Europa y págalo a cuotas</div>
+<!--#/#--><!--#i6.i560.image.html:image/html-->
+<img id="i560" src="https://i.imgur.com/zGREj9N.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i440.image.html:image/html-->
@@ -1081,6 +1114,10 @@ bmShow('i181');
 bmShow('i414');
 /*#/#*//*#i522.i523.positioning.js:positioning/base/js.2*/
 bmShow('i522');
+/*#/#*//*#i4.i548.image.js:image/base/js*/
+
+/*#/#*//*#i548.i549.positioning.js:positioning/base/js.2*/
+bmShow('i548');
 /*#/#*//*#i91.i486.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i91');
@@ -1162,10 +1199,14 @@ bmShow('i428');
 
 /*#/#*//*#i530.i531.positioning.js:positioning/base/js.2*/
 bmShow('i530');
+/*#/#*//*#i550.i551.positioning.js:positioning/base/js.2*/
+bmShow('i550');
 /*#/#*//*#i536.i537.positioning.js:positioning/base/js.2*/
 bmShow('i536');
-/*#/#*//*#i534.i535.positioning.js:positioning/base/js.2*/
-bmShow('i534');
+/*#/#*//*#i5.i558.image.js:image/base/js*/
+
+/*#/#*//*#i558.i559.positioning.js:positioning/base/js.2*/
+bmShow('i558');
 /*#/#*//*#i434.i484.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i434');
@@ -1247,6 +1288,14 @@ bmShow('i532');
 
 /*#/#*//*#i518.i519.positioning.js:positioning/base/js.2*/
 bmShow('i518');
+/*#/#*//*#i552.i553.positioning.js:positioning/base/js.2*/
+bmShow('i552');
+/*#/#*//*#i544.i545.positioning.js:positioning/base/js.2*/
+bmShow('i544');
+/*#/#*//*#i6.i560.image.js:image/base/js*/
+
+/*#/#*//*#i560.i561.positioning.js:positioning/base/js.2*/
+bmShow('i560');
 /*#/#*//*#i99.i482.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1311,10 +1360,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i544.i545.positioning.js:positioning/base/js.2*/
-bmShow('i544');
-/*#/#*//*#i546.i547.positioning.js:positioning/base/js.2*/
-bmShow('i546');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1371,9 +1416,14 @@ name: Reserva tu plan a Europa y págalo a cuotas; customName: false;
 /*#/#*//*#i414.i415.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i522.text.meta:text/meta*/
-name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses.; customName: false;
+name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses. Aplican T&C.; customName: false;
 /*#/#*//*#i522.i523.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i548.image.meta:image/meta*/
+name: zGREj9N.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i548.i549.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -1418,14 +1468,19 @@ name: BOTON copy 2; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i530.i531.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i550.text.meta:text/meta*/
+name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses. Aplican T&C.; customName: false;
+/*#/#*//*#i550.i551.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i536.text.meta:text/meta*/
 name: Reserva tu plan a Europa y págalo a cuotas; customName: false;
 /*#/#*//*#i536.i537.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i534.text.meta:text/meta*/
-name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses.; customName: false;
-/*#/#*//*#i534.i535.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i558.image.meta:image/meta*/
+name: zGREj9N.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i558.i559.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i434.shape.meta:shape/meta*/
 name: Link copy;
 /*#/#*//*#i434.i437.positioning.meta:positioning/meta.1*/
@@ -1470,14 +1525,19 @@ name: LOGO copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i518.i519.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i546.text.meta:text/meta*/
-name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses.; customName: false;
-/*#/#*//*#i546.i547.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i6.i552.text.meta:text/meta*/
+name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y pagalo antes de viajar sin pagar intereses. Aplican T&C.; customName: false;
+/*#/#*//*#i552.i553.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i544.text.meta:text/meta*/
 name: Reserva tu plan a Europa y págalo a cuotas; customName: false;
 /*#/#*//*#i544.i545.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i6.i560.image.meta:image/meta*/
+name: zGREj9N.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i560.i561.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
